data/derived/fa15/progs/unify/prog0533.ml.out
Characters 56-92:
  | h::t -> catLists t ((lastListElement x)::[]) :: y;;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
